Layout bug fix.

--- a/src/styles/components/comparison-table.sass
+++ b/src/styles/components/comparison-table.sass
@@ -1,10 +1,10 @@
 .column-main
     background: #FAFBFF !important
     box-shadow: black 0 30px 4px
-    z-index: 3
+    z-index: 3 !important
 
 .column-group
     background: #F7F8FC !important
     color: #444
     box-shadow: black 0 30px 2px
-    z-index: 2
+    z-index: 2 !important
